# models-sdk

./: .gitignore  LICENSE  MANIFEST.in  MODEL_ENDPOINTS.md  PUBLISHING.md  README.md  publish.sh  pyproject.toml  setup.py  test_endpoints.py
examples/: discover_parameters.py  full_workflow.py  llm_chat.py  model_parameters.py  synthesize_speech.py  transcribe_audio.py  voice_cloning.py
hathora/: __init__.py  _utils.py  client.py  exceptions.py  types.py
hathora/resources/: __init__.py  llm.py  speech_to_text.py  text_to_speech.py
yapp/: __init__.py  _utils.py  client.py  exceptions.py
yapp/resources/: __init__.py  speech_to_text.py  synthesis.py  text_to_speech.py  transcription.py
